--- a/lunbo.html
+++ b/lunbo.html
@@ -32,6 +32,7 @@
             <img src="images/icon10.jpg" alt="">
             <img src="images/icon11.jpg" alt="">
             <img src="images/icon12.jpg" alt="">
+            <img src="images/icon12.jpg" alt="">
         </div>
         <span>&lt;</span>
         <span>&gt;</span>
