--- a/lunbo.html
+++ b/lunbo.html
@@ -23,7 +23,7 @@
             <img src="images/icon1.jpg" alt="">
             <img src="images/icon2.jpg" alt="">
             <img src="images/icon3.jpg" alt="">
-            <!-- <img src="images/icon4.jpg" alt="">
+            <img src="images/icon4.jpg" alt="">
             <img src="images/icon5.jpg" alt="">
             <img src="images/icon6.jpg" alt="">
             <img src="images/icon7.jpg" alt="">
@@ -32,7 +32,7 @@
             <img src="images/icon10.jpg" alt="">
             <img src="images/icon11.jpg" alt="">
             <img src="images/icon12.jpg" alt="">
-            <img src="images/icon12.jpg" alt=""> -->
+            <img src="images/icon12.jpg" alt="">
         </div>
         <span>&lt;</span>
         <span>&gt;</span>
